# taflr

./: .env  Cargo.toml  Dioxus.toml  README.md  TODO.md  setup.sh
assets/css/: about.css  board.css  game.css  game_info_panel.css  game_setup.css  game_side_pane.css  header_bar.css  load_game.css  main.css  mainmenu.css  variables.css
assets/pieces/: README.md
sql/: schema.sqlite
src/: ai.rs  aictrl.rs  config.rs  db.rs  error.rs  game_settings.rs  gamectrl.rs  main.rs  message.rs  route.rs  sqlite.rs  variants.rs
src/backend/: aictrl.rs  mod.rs
src/components/: about.rs  board.rs  game.rs  game_info_panel.rs  header_bar.rs  load_game.rs  mainmenu.rs  mod.rs  navbutton.rs  new_game.rs  piece.rs  square.rs  status_bar.rs  style.rs
src/components/game_screen/: board.rs  ctrl_panel.rs  game.rs  icons.rs  info_panel.rs  mod.rs  piece.rs  setup.rs  side_pane.rs  square.rs
src/components/play_game/: board.rs  ctrl_panel.rs  game.rs  mod.rs  piece.rs  square.rs
