[package]
name = "taflr"
version = "0.1.0"
authors = ["bunburya <dev@bunburya.eu>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.3", features = ["asset", "fullstack"] }
hnefatafl = { path = "../hnefatafl", features = ["serde"] }
rand = "0.8.5"
serde = { version = "1.0.219", features = ["derive"] }
async-std = "1.13.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
gloo-timers = "0.3.0"
web-time = "1.1.0"

[features]
default = []
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
